[project]
name = "wheatear_repeat"
version = "0.0.1"
authors = [
  { name="Edward Moulsdale", email="eddie.moulsdale@gmail.com" },
]
description = "A security automation tool for brute force searches"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emoulsdale/wheatear-repeat"
"Bug Tracker" = "https://github.com/emoulsdale/wheatear-repeat/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

