[metadata]
license_file = LICENSE
name = wheatear-repeat
author = Edward Moulsdale
author_email = eddie.moulsdale@gmail.com
description = A brute-forcing library for simplified use-cases
long_description = file:README.md
long_description_content_type = text/x-markdown
url = https://github.com/emoulsdale/wheatear-repeat
project_urls =
    Source = https://github.com/emoulsdale/wheatear-repeat

[options]
packages =
    wheatear-repeat
python_requires = >=3.7
install_requires=
    requests
